fancybuttons overflow fix

--- a/css/fancybuttons.css
+++ b/css/fancybuttons.css
@@ -1,7 +1,7 @@
 .fancy-button {
     position: relative;
-    clip-path: none;
     cursor: pointer;
+    overflow: hidden;
 
     display: flex;
     justify-content: center;
